--- a/chacon.straub/git/2014.bib
+++ b/chacon.straub/git/2014.bib
@@ -37,6 +37,7 @@
 , edition = {2}
 , isbn = {978-1-4842-0077-3}
 , langid = {american}
+, pagetotal = {426}
 , publisher = {{A}press}
 , subtitle = {{E}verything your need to know about {G}it}
 , title = {{P}ro {G}it}
