--- a/chivers.sleightholme/fortran/2018.bib
+++ b/chivers.sleightholme/fortran/2018.bib
@@ -37,6 +37,7 @@
 , edition = {4}
 , isbn = {978-3-030-09248-1}
 , langid = {british}
+, pagetotal = {956}
 , publisher = {{S}pringer}
 , title = {{I}ntroduction to {P}rogramming with {F}ortran}
 , year = {2018}
