--- a/kuhme.witschital/fortran/1991.bib
+++ b/kuhme.witschital/fortran/1991.bib
@@ -37,6 +37,7 @@
 , edition = {3}
 , isbn = {978-3-486-22016-2}
 , langid = {german}
+, pagetotal = {248}
 , publisher = {{O}ldenbourg}
 , title = {{D}ie {FORTRAN}-{F}ibel}
 , year = {1991}
