--- a/chivers.sleightholme/fortran/2018.bib
+++ b/chivers.sleightholme/fortran/2018.bib
@@ -34,6 +34,7 @@
 , address = {{C}ham}
 , author = {{C}hivers, {I}an and {S}leightholme, {J}ane}
 , date = {2018}
+, doi = {10.1007/978-3-319-75502-1}
 , edition = {4}
 , isbn = {978-3-030-09248-1}
 , langid = {british}
