[Enhancement] Add Book [MRC18] (#3)
* Update CITATION.cff

* Update 2018.bib

* Create 2018.bib

--- a/metcalf.reid.cohen/fortran/2018.bib
+++ b/metcalf.reid.cohen/fortran/2018.bib
@@ -30,17 +30,18 @@
 %%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-@book{chivers.sleightholme:fortran:2018
-, address = {{C}ham}
-, author = {{C}hivers, {I}an and {S}leightholme, {J}ane}
+@book{metcalf.reid.cohen:fortran:2018
+, address = {{N}ew {Y}ork}
+, author = {{M}etcalf, {M}ichael and {R}eid, {J}ohn and {C}ohen, {M}alcolm}
 , date = {2018}
-, doi = {10.1007/978-3-319-75502-1}
-, edition = {4}
-, isbn = {978-3-030-09248-1}
+, doi = {10.1093/oso/9780198811886.001.0001}
+, edition = {8}
+, isbn = {978-0-19-881188-6}
 , langid = {british}
-, pagetotal = {956}
-, publisher = {{S}pringer}
-, title = {{I}ntroduction to {P}rogramming with {F}ortran}
+, pagetotal = {522}
+, publisher = {{O}xford {U}niversity {P}ress}
+, subtitle = {{I}ncorporating {F}ortran 2018}
+, title = {{M}odern {F}ortran {E}xplained}
 , year = {2018}
 }
 
