--- a/metcalf.reid.cohen/fortran/2018.bib
+++ b/metcalf.reid.cohen/fortran/2018.bib
@@ -31,11 +31,11 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 @book{metcalf.reid.cohen:fortran:2018
-, address = {{N}ew {Y}ork}
+, address = {{O}xford}
 , author = {{M}etcalf, {M}ichael and {R}eid, {J}ohn and {C}ohen, {M}alcolm}
 , date = {2018}
 , doi = {10.1093/oso/9780198811886.001.0001}
-, edition = {8}
+, edition = {2}
 , isbn = {978-0-19-881188-6}
 , langid = {british}
 , pagetotal = {522}
